[tool.poetry]
name = "llm4qual"
version = "0.1.0"
description = ""
authors = ["Amogh Mannekote <msamogh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.16.1"
langchain = "^0.1.0"
evaluate = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
