[tool.poetry]
name = "llm4qual"
version = "0.1.0"
description = ""
authors = ["Amogh Mannekote <msamogh@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
datasets = "^2.16.1"
langchain = "^0.1.0"
transformers = { git = "https://github.com/msamogh/transformers4qual", branch = "llm4qual" }
evaluate = { git = "https://github.com/msamogh/evaluate4qual", branch = "llm4qual" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
